<resources>
    <string name="app_name">CS3270A5 Pickle</string>
    <string name="correct_change_count">Correct Change Count</string>
    <string name="zero">0</string>
    <string name="start_over">Start Over</string>
    <string name="new_amount">New Amount</string>
    <string name="fifty_dollars">$50</string>
    <string name="twenty_dollars">$20</string>
    <string name="ten_dollars">$10</string>
    <string name="five_dollars">$5</string>
    <string name="one_dollar">$1</string>
    <string name="fifty_cents">.50</string>
    <string name="twentyfive_cents">.25</string>
    <string name="ten_cents">.10</string>
    <string name="five_cents">.05</string>
    <string name="one_cent">.01</string>
    <string name="practice_making_change">Practice Making Change</string>
    <string name="change_to_make">Change to Make</string>
    <string name="change_total_so_far">Change total so far</string>
    <string name="change_total_so_far_value">$%.2f</string>
    <string name="zero_cents">$0.00</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="fifteen">15</string>
    <string name="set_change_max">Set Change Max</string>
    <string name="maximum_change_amount">Maximum Change Amount</string>
    <string name="onehundred">100</string>
    <string name="save">SAVE</string>
    <string name="zero_correct_count">Zero Correct Count</string>
    <string name="you_took_too_long">You took too long.</string>
    <string name="ok">OK</string>
    <string name="you_should_try_again">You should try again.</string>
    <string name="you_were_able_to_make_the_correct_change">You were able to make the correct change.</string>
    <string name="you_did_it">You did it!</string>
    <string name="thats_too_much_change">That\'s too much change.</string>
    <string name="max_value_minimum">The Change Max Value must be $50.01 or greater.</string>
    <string name="invalid_input">Invalid Input</string>
</resources>
